 * Commands are no longer queued for HALTed non-players. (Since they'd be
   dropped from the queue anyway, rather than being run, it saves us jumping
   through a series of hoops for no good reason.) From a report by Muse and
   Ashen-Shugar. [MG]
 * The connect-screen WHO now shows moniker'd (ansi'd) names, if so 
   configured. Requested by Trinsec. [MG]
   
Functions:
 * delete(), replace() and insert() have been renamed to strdelete(), 
   lreplace() and linsert(), respectively, for clarity and conformity. The
   original names remain as aliases. [MG]
 * moniker(<object>) returns an objects monikered name. [MUX] [MG]
 * mapsql() only stored 10 columns, instead of the advertised 30. Reported
   by Mercutio. [MG]
 * fn() now takes an <obj>/ prefix to its first arg, to evaluate the built-in
   function as <obj>. Useful when overriding side-effect functions. [MG]
 * r() now takes two arguments, allowing it to return the stack (%0-%9),
   itext() and stext() values, as well as q-registers(). [MG]

Version 1.8.5 patchlevel 4                                 Mar 17, 2013

Major changes:
 * The player_name_len @config option is now the maximum length of a player
   name, instead of the maximum length+1, because doing it that way was
   rather silly. You may wish to lower yours by 1 now to compensate.
   Suggested by Mercutio. [MG]
 * Having unescaped commas in the final arg of a function call is now
   deprecated, and will eventually become illegal. Any existing code which
   does this will spam you with a warning until you change it. [MG]
 * The stack (%0-%9) can now hold up to 30 arguments, with the additional 20
   available through v(10) to v(29). $-commands, @functions and many built-in
   commands and functions (such as ufun(), @mapsql, etc) now make use of
   these args. [MG] [MUX] [Rhost]

Commands:
 * @dolist now accepts /inline and related switches, like @switch does.
   Suggested by Reaver. [MG]